--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -73,6 +73,22 @@
 
   --animation-accordion-down: accordion-down 0.2s ease-out;
   --animation-accordion-up: accordion-up 0.2s ease-out;
+
+  @keyframes pulse-border {
+
+    0%,
+    100% {
+      box-shadow: 0 0 0 0 rgba(16, 185, 129, 0);
+      border-color: rgba(16, 185, 129, 1);
+    }
+
+    50% {
+      box-shadow: 0 0 20px 2px rgba(16, 185, 129, 0.4);
+      border-color: rgba(16, 185, 129, 0.5);
+    }
+  }
+
+  --animation-pulse-border: pulse-border 3s cubic-bezier(0.4, 0, 0.6, 1) infinite;
 }
 
 :root {
